<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/reminderCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        android:fadeVisible="@{true}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_reminder_item"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:id="@+id/iv_googleMapsPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/accessibility_googleMapsPin"
                android:src="@drawable/ic_google_maps_pin"
                app:layout_constraintBottom_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:text="@{item.title}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toEndOf="@id/iv_googleMapsPin"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Supermarket" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@{item.description}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="Carrefour neighbourhood, offering all sorts of goods for your daily life. " />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/round_corners_button_teal"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@{item.location}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:text="View location" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
