<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <!-- Authentication Screen -->
    <string name="authentication_signInWithEmail">Sign in with email</string>
    <string name="authentication_signInWithGoogle">Sign in with Google</string>
    <string name="authentication_signUpForANewAccountUnderlined"><u>Sign up for a new account</u></string>
    <string name="authentication_signUpForANewAccount">Sign up for a new account</string>
    <string name="authentication_email">email</string>
    <string name="authentication_password">password</string>
    <string name="authentication_signup">Sign Up</string>
    <string name="authentication_message">Or you may sign up with your Google account:</string>
    <string name="authentication_signUpWithGoogle">Sign up with Google</string>
    <string name="authentication_logOutFailed">Logout failed</string>
    <string name="authentication_loginMethod">Select your preferred login method.</string>
    <string name="authentication_registerOrLogin">Sing in or register</string>
    <string name="authentication_loginRequired">Welcome! Please, sign in or register for a new account.</string>

    <!-- Reminder Screen -->
    <string name="location"><u>See location on map</u></string>
    <string name="reminders_yourReminders">Your Reminders</string>
    <string name="reminders_mapFragment">map_fragment</string>

    <!-- Select Location Screen -->
    <string name="selectLocation_saveThisLocation">Save this location</string>
    <string name="selectLocation_infoUnavailable">Info unavailable.</string>
    <string name="selectLocation_zoom">zoom</string>

    <!-- Accessibility -->
    <string name="accessibility_backgroundImageDescription">Background image, house with a location pin over it.</string>
    <string name="accessibility_googleMapsPin">Google Maps pin</string>
    <string name="accessibility_editTextEmail">Add your email</string>
    <string name="accessibility_editTextPassword">Add your email</string>
    <string name="accessibility_editTextTitle">Add your reminder title</string>
    <string name="accessibility_editTextDescription">Add your reminder description</string>
    <string name="accessibility_fabSaveReminder">FAB Save reminder</string>
    <string name="accessibility_fabAddReminder">FAB Add reminder</string>
    <string name="saveReminder_newReminder">New reminder</string>

</resources>
